<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
	<name>zedxone_components</name>
<version>0.1.0</version>
	<description>Contains the main ROS 2 components to use a ZED X One camera of the Stereolabs GMSL2 family</description>
	<maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
	<license>Apache License 2.0</license>
	<url type="website">http://stereolabs.com/</url>
	<url type="repository">https://github.com/stereolabs/zedxone-ros2</url>
	<url type="bugtracker">https://github.com/stereolabs/zedxone-ros2/issues</url>
	
	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>ament_cmake_auto</build_depend>

	
	<build_depend>rclcpp</build_depend>
	<build_depend>rclcpp_components</build_depend>
	<build_depend>rcutils</build_depend>
	<build_depend>builtin_interfaces</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>diagnostic_msgs</build_depend>
	<build_depend>diagnostic_updater</build_depend>

	<exec_depend>launch_ros</exec_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>rclcpp_components</exec_depend>
	<exec_depend>rcutils</exec_depend>
	<exec_depend>builtin_interfaces</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>image_transport</exec_depend>
	<exec_depend>diagnostic_msgs</exec_depend>
	<exec_depend>diagnostic_updater</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_copyright</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_pep257</test_depend>
	<test_depend>ament_cmake_uncrustify</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
